--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Pinopticron</name>
+	<name>Teste_Motor_PWM</name>
 	<comment />
 	<projects>
 	</projects>
